Fix shifty tab buttons

--- a/react-app/src/components/CreateForm/FormContainer/FormEngine/FormEngine.module.css
+++ b/react-app/src/components/CreateForm/FormContainer/FormEngine/FormEngine.module.css
@@ -256,6 +256,7 @@
 	border-bottom-left-radius: 0;
 	border-top-left-radius: 12px;
 	text-align: left;
+	display: inline-flex;
 }
 
 .field_settings:hover {
@@ -269,32 +270,34 @@
 
 .caret_right {
 	margin-right: 9px;
-	font-size: 18px;
+	font-size: 19px;
+
 	max-width: 6px;
 	overflow: visible;
 	position: relative;
-	/* bottom: 2px; */
 	right: 10px;
-	top: 2px;
+	top: 1px;
 }
 
 .caret_down {
 	margin-right: 9px;
-	font-size: 18px;
+	font-size: 19px;
 	max-width: 6px;
 	overflow: visible;
 	position: relative;
 	/* bottom: 2px; */
-	right: 10px;
-	top: 1px;
+	right: 13px;
+
 	/* color: #e9c14a; */
 	color: rgb(103, 175, 26);
 }
 
 .option_text {
 	position: relative;
-	right: 15px;
+	right: 8px;
+	top: 4px;
 	font-weight: 400;
+	display: inline-block;
 }
 
 .form_preview {
@@ -320,14 +323,6 @@
 	letter-spacing: 0.75px;
 	color: #555555;
 	margin-top: 5px;
-}
-
-.add_field_tab {
-	padding: 15px;
-}
-
-.field_settings_tab {
-	padding: 15px;
 }
 
 .form_settings_label {
@@ -376,7 +371,7 @@
 	font-size: 13px;
 }
 
-.share_save_footer {
+.view_share_footer {
 	width: 630px;
 	padding: 25px 0 30px 0;
 	background-color: #fff6bf;
@@ -385,5 +380,106 @@
 	z-index: 1000;
 	bottom: 0;
 	left: 50%;
+	height: 56px;
 	margin-left: -130px;
+}
+
+.view_button_wrapper {
+	position: absolute;
+	left: 0;
+	padding-left: 20px;
+	top: 25px;
+}
+
+.share_button_wrapper {
+	position: absolute;
+	right: 0;
+	padding-right: 20px;
+	top: 25px;
+}
+
+.view_button {
+	padding: 4px 0 4px 34px;
+	position: relative;
+	bottom: 10px;
+	border: 1px solid #dad8d8;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	box-shadow: 0 1px 3px 0 rgb(0 0 0 / 10%);
+	border-radius: 9px;
+	margin: 0 0.7em 0 1em;
+	background-color: #f8fafb;
+	color: #464646;
+	cursor: pointer;
+	text-decoration: none;
+	line-height: 130%;
+	background-clip: padding-box;
+	width: 135px;
+	height: 26px;
+	display: inline-block;
+	font-size: 13px;
+	font-weight: 500;
+	letter-spacing: 2px;
+}
+
+.view_button_icon {
+	line-height: 24px;
+	width: 24px;
+	height: 24px;
+	display: inline-block;
+	position: absolute;
+	left: 8px;
+	bottom: 0px;
+	background-image: url(../../../../../src/assets/images/icons8-view-50.png);
+	background-size: 28px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.view_button_text {
+	float: left;
+	padding-left: 5px;
+}
+
+.share_button {
+	padding: 4px 0 4px 34px;
+	position: relative;
+	bottom: 10px;
+	border: 1px solid #dad8d8;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	box-shadow: 0 1px 3px 0 rgb(0 0 0 / 10%);
+	border-radius: 9px;
+	margin: 0 0.7em 0 1em;
+	background-color: #8db817;
+	color: white;
+	cursor: pointer;
+	text-decoration: none;
+	line-height: 130%;
+	background-clip: padding-box;
+	width: 136px;
+	height: 26px;
+	display: inline-block;
+	font-size: 13px;
+	font-weight: 500;
+	letter-spacing: 2px;
+}
+
+.share_button_icon {
+	line-height: 24px;
+	width: 24px;
+	height: 24px;
+	display: inline-block;
+	position: absolute;
+	left: 8px;
+	bottom: 0px;
+	background-image: url(../../../../../src/assets/images/icons8-share-50.png);
+	background-size: 28px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.share_button_text {
+	float: left;
+	padding-left: 5px;
 }
